implement benchmarking pipeline

--- a/scripts/function_calling_dataset/config.yaml
+++ b/scripts/function_calling_dataset/config.yaml
@@ -1,38 +1,41 @@
-name: fml-generation
-save_frequency:   
+name: fml-generation-1
+save_frequency: 50
 data:
   input:
-    feedback: data/fml-generation/2024-02-14-10-15-15/checkpoints/feedback 
+    repo_id: burtenshaw/function_calling_dataset
   output:
     argilla: fml-generation
 generation:
   functions:
     max_inputs: 20
-    num_generations: 2
+    num_generations: 15
     batch_size: 10
   instructions:
-    num_generations: 10
+    num_generations: 120
     batch_size: 10
   responses:
-    num_generations: 2
+    num_generations: 5
     batch_size: 10
   feedback:
     num_generations: 1
     batch_size: 3
 expansion:
-  non_calls:
-    max_inputs: 2
-    num_generations: 2
-    batch_size: 5
+  # non_calls:
+  #   num_generations: 2
+  #   batch_size: 5
   distractors:
     max_distractors: 3
-    max_inputs: 50
+  # feedback:
+  #   num_generations: 2
+  #   batch_size: 10
+benchmark:
+  generate:
+    num_generations: 2
+    batch_size: 10
+    max_inputs: 20
   feedback:
     num_generations: 2
     batch_size: 10
-
-
-  
-  
+    max_inputs: 20
 
   
