--- a/scripts/function_calling_dataset/pyproject.toml
+++ b/scripts/function_calling_dataset/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "^1.2.0"
 huggingface-hub = {extras = ["cli"], version = "^0.20.3"}
 datasets = "^2.17.1"
 openai = "^1.12.0"
+vllm = "^0.3.2"
 
 
 [build-system]
