--- a/scripts/function_calling_dataset/pyproject.toml
+++ b/scripts/function_calling_dataset/pyproject.toml
@@ -17,6 +17,8 @@ huggingface-hub = {extras = ["cli"], version = "^0.20.3"}
 datasets = "^2.17.1"
 openai = "^1.12.0"
 vllm = "^0.3.2"
+outlines = "^0.0.34"
+ipykernel = "^6.29.3"
 
 
 [build-system]
