--- a/dibt/spin/configs/config_iter1.yaml
+++ b/dibt/spin/configs/config_iter1.yaml
@@ -3,8 +3,8 @@ model_name_or_path: teknium/OpenHermes-2.5-Mistral-7B
 
 # Data training arguments
 dataset_mixer:
-#  argilla/10k_prompts_top_SPIN_iter0: 1.0
-  argilla/10k_prompts_avg_rating3_SPIN_iter0_top: 1.0
+  argilla/10k_prompts_top_SPIN_iter0: 1.0
+  argilla/10k_prompts_top_SPIN_iter1: 1.0
 dataset_splits:
 - train
 - test
@@ -13,12 +13,12 @@ preprocessing_num_workers: 12
 # Trainer arguments
 bf16: true
 beta: 0.1
-do_eval: true
-evaluation_strategy: steps
-eval_steps: 25
-gradient_accumulation_steps: 2
+do_eval: false
+evaluation_strategy: "no"
+eval_steps: 100
+gradient_accumulation_steps: 1
 gradient_checkpointing: true
-hub_model_id: OpenHermes-2.5-Mistral-7B-spin-iter0-v2
+hub_model_id: OpenHermes-2.5-Mistral-7B-spin
 learning_rate: 5.0e-7
 log_level: info
 logging_steps: 10
@@ -28,7 +28,7 @@ max_prompt_length: 512
 num_train_epochs: 2
 optim: rmsprop
 output_dir: outputs
-per_device_train_batch_size: 4
+per_device_train_batch_size: 8
 per_device_eval_batch_size: 4
 push_to_hub: true
 save_strategy: "epoch"
