--- a/dibt/spin/configs_openhermes/config_iter1.yaml
+++ b/dibt/spin/configs_openhermes/config_iter1.yaml
@@ -1,5 +1,5 @@
 # Model arguments
-model_name_or_path: plaguss/openhermes-2p5-spin-v0-iter0
+model_name_or_path: plaguss/openhermes-2.5-spin-v0-iter0
 
 # Data training arguments
 dataset_mixer:
